[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
bytecheck = "0.6.9"
flate2 = "1.0.25"
generic-array = "0.14.6"
rkyv = { version = "0.7.39", features = ["validation"] }
rpassword = "7.2.0"
sha2 = "0.10.6"
typenum = "1.16.0"
