[package]
name = "vfs"
version = "4.1.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bytecheck = "0.7.0"
chrono = "0.4.31"
colored = "2.1.0"
generic-array = "1.0.0"
rand = "0.8.5"
rkyv = { version = "0.7.43", features = ["validation"] }
rpassword = "7.3.1"
sha2 = "0.10.8"
snafu = "0.7.5"
snap = "1.1.1"
typenum = "1.17.0"
